; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/buffer/extr_industrialio-buffer-dma.c_iio_dma_buffer_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/buffer/extr_industrialio-buffer-dma.c_iio_dma_buffer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dma_buffer_queue = type { i32, i32, i32, i32, %struct.iio_dma_buffer_ops*, %struct.device*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.device = type { i32 }
%struct.iio_dma_buffer_ops = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iio_dma_buffer_init(%struct.iio_dma_buffer_queue* %0, %struct.device* %1, %struct.iio_dma_buffer_ops* %2) #0 {
  %4 = alloca %struct.iio_dma_buffer_queue*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.iio_dma_buffer_ops*, align 8
  store %struct.iio_dma_buffer_queue* %0, %struct.iio_dma_buffer_queue** %4, align 8
  store %struct.device* %1, %struct.device** %5, align 8
  store %struct.iio_dma_buffer_ops* %2, %struct.iio_dma_buffer_ops** %6, align 8
  %7 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %8 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %7, i32 0, i32 6
  %9 = call i32 @iio_buffer_init(%struct.TYPE_2__* %8)
  %10 = load i32, i32* @PAGE_SIZE, align 4
  %11 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %12 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %11, i32 0, i32 6
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 8
  %14 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %15 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %14, i32 0, i32 6
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = sdiv i32 %17, 2
  %19 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %20 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %19, i32 0, i32 6
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  store i32 %18, i32* %21, align 4
  %22 = load %struct.device*, %struct.device** %5, align 8
  %23 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %24 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %23, i32 0, i32 5
  store %struct.device* %22, %struct.device** %24, align 8
  %25 = load %struct.iio_dma_buffer_ops*, %struct.iio_dma_buffer_ops** %6, align 8
  %26 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %27 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %26, i32 0, i32 4
  store %struct.iio_dma_buffer_ops* %25, %struct.iio_dma_buffer_ops** %27, align 8
  %28 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %29 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %28, i32 0, i32 3
  %30 = call i32 @INIT_LIST_HEAD(i32* %29)
  %31 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %32 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %31, i32 0, i32 2
  %33 = call i32 @INIT_LIST_HEAD(i32* %32)
  %34 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %35 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %34, i32 0, i32 1
  %36 = call i32 @mutex_init(i32* %35)
  %37 = load %struct.iio_dma_buffer_queue*, %struct.iio_dma_buffer_queue** %4, align 8
  %38 = getelementptr inbounds %struct.iio_dma_buffer_queue, %struct.iio_dma_buffer_queue* %37, i32 0, i32 0
  %39 = call i32 @spin_lock_init(i32* %38)
  ret i32 0
}

declare dso_local i32 @iio_buffer_init(%struct.TYPE_2__*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @spin_lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
